...

      <Tabs.Screen
        name="reels"
        options={{
          title: 'The Reel',
          tabBarAccessibilityLabel: 'The Reel tab',
          tabBarButtonTestID: 'reels-tab',
          tabBarIcon: renderReelsIcon,
        }}
      />

      <Tabs.Screen
        name="index"
        options={{
          title: 'Lobby',
          tabBarAccessibilityLabel: 'Lobby tab',
          tabBarButtonTestID: 'home-tab',
          tabBarIcon: renderLobbyIcon,
        }}
      />

      <Tabs.Screen
        name="darkroom"
        options={{
          title: 'Darkroom',
          tabBarAccessibilityLabel: 'Darkroom tab',
          tabBarButtonTestID: 'darkroom-tab',
          tabBarIcon: renderDarkroomIcon,
        }}
      />

      <Tabs.Screen
        name="profile"
...
